# zeply-challenge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yaml
tests/: fixtures.py  test_api.py
zeply_challenge/: api.py  cli.py  db.py  models.py  settings.py  wallet.py
