[tool.poetry]
name = "zeply-challenge"
version = "0.1.0"
description = ""
authors = ["Nikolay Bryskin <nbryskin@gmail.com>"]
readme = "README.md"
packages = [{include = "zeply_challenge"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
sqlalchemy = "^2.0.15"
pydantic = "^1.10.7"
cryptos = "^2.0.7"
eth-keys = "^0.4.0"
aiosqlite = "^0.19.0"
hypercorn = "^0.14.3"
typer = "^0.9.0"
eth-hash = {extras = ["pycryptodome"], version = "^0.5.1"}

[tool.poetry.group.dev.dependencies]
ipython = "^8.13.2"
flake8-pyproject = "^1.2.3"
mypy = "^1.3.0"
sqlalchemy = {extras = ["mypy"], version = "^2.0.15"}

[tool.poetry.scripts]
zeply-challenge-cli = 'zeply_challenge.cli:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = ["W503"]
max-line-length = 130

[tool.mypy]
plugins = "pydantic.mypy,sqlalchemy.ext.mypy.plugin"
